# bc-helper

./: Cargo.toml  README.md
.github/workflows/: build.yml
data/: account.bean  categories.bean  config.yml  tmp.bean
src/: helper.rs  lib.rs  main.rs  transaction.rs  utils.rs
tests/: abbr.rs  bean.rs  config.rs  parser.rs
